# gravnet

./: .gitignore  README.md  REQUIREMENTS  pyproject.toml
src/gravnet/: __init__.py  constants.py
src/gravnet/data/: color.py  fits.py
src/gravnet/detection/: detection.py
